# structure-gen

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  cli.py  core.py
